apps/fyp-3warriors-tk/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fyp-3warriors-tk
  labels:
    app.kubernetes.io/name: fyp-3warriors-tk
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fyp-3warriors-tk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fyp-3warriors-tk
    spec:
      containers:
      - name: web
        image: 444718235796.dkr.ecr.ap-southeast-1.amazonaws.com/fyp-3warriors-tk:766606b
        ports:
        - containerPort: 80
